framec_tests/language_specific/typescript/v3_outline/negative/header_outside_section.frm
@target typescript

system S {
    fn bad() {
        // body
    }
}
